# riot_transmute

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  game_timeline.json  pylintrc  pyproject.toml  setup.py
.github/workflows/: black.yml  pr_tests_python.yml
examples/: ESPORTSTMNT01_3096461_from_match.json  ESPORTSTMNT01_3096461_from_timeline.json  ESPORTSTMNT03_2961931_from_timeline.json  ESPORTSTMNT03_2961931_merged.json  game_from_match.json  game_from_match_timeline.json  game_from_match_with_names.json  game_from_timeline.json  game_from_timeline_with_names.json  game_merged.json  game_merged_with_names.json  riot_api_match_timeline.json  source_custom_timeline.json  source_match.json
json_examples/: game_from_match.json  game_from_match_with_names.json  game_from_timeline.json  game_from_timeline_with_names.json  game_merged.json  game_merged_with_names.json  source_timeline_esports.json
lol_dto_parser/: match_timeline_to_game.py  match_to_game.py  riotwatcher_dto.py
lol_dto_parser/tests/: test_riotwatcher_dto.py
riot_api_to_lol_dto/: match_dto_to_game.py  match_timeline_to_game.py  match_to_game.py  riotwatcher_dto.py  timeline_dto_to_game.py
riot_api_to_lol_dto/tests/: test_riotwatcher_dto.py
riot_transmute/: __init__.py  constants.py  logger.py  match_timeline_to_game.py  match_to_game.py  merge_match_and_timeline.py
riot_transmute/common/: constants.py  get_player.py  (+1 more)
riotwatcher_dto/: match_dto_to_game.py  riotwatcher_dto.py
scripts/: prep_tests.py
tests/: conftest.py  prep_tests.py  test_all_versions.py  test_all_versions_v4.py  test_match_timeline_to_game.py  test_match_timeline_to_game_v4.py  test_match_to_game.py  test_match_to_game_v4.py  test_merge.py  test_merge_v4.py  test_riot_transmute.py  test_riotwatcher_dto.py  test_v5.py
(+301 files in other folders)
